--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "cookie-parse": "^0.4.0",
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {},
   "scripts": {
