--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "multer": "^1.4.2"
   },
