--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "mysql": "^2.17.1"
   },
   "devDependencies": {},
   "scripts": {
